crates/alloy-signer/tests/trybuild/no_signing_provider.stderr
error[E0277]: the trait bound `LocalAlloySigner: SigningProvider` is not satisfied
  --> tests/trybuild/no_signing_provider.rs:14:31
   |
14 |     requires_signing_provider(&signer);
   |     ------------------------- ^^^^^^^ the trait `SigningProvider` is not implemented for `LocalAlloySigner`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `requires_signing_provider`
  --> tests/trybuild/no_signing_provider.rs:4:33
   |
 4 | fn requires_signing_provider<P: SigningProvider>(_provider: &P) {}
   |                                 ^^^^^^^^^^^^^^^ required by this bound in `requires_signing_provider`
